[package]
name = "bevy_kxs"
version = "0.1.0"
edition = "2021"

[dependencies]
bevy = { version = "*", features = ["dynamic_linking"] }

[profile.dev]
opt-level = 1
[profile.dev.package."*"]
opt-level = 3

[profile.release]
codegen-units = 1

lto = "thin"
[profile.wasm-release]
inherits = "release"
opt-level = "s"
strip = "debuginfo"
